--- a/src/app/components/charts/line-bar/line-bar.component.scss
+++ b/src/app/components/charts/line-bar/line-bar.component.scss
@@ -1,6 +1,5 @@
 .line-bar {
   display: flex;
-  height: 100px;
   width: 100%;
   gap: 0.5rem;
 
@@ -26,8 +25,8 @@
       &__color {
         display: flex;
         background-color: var(--bar-color);
-        height: 10px;
-        width: 10px;
+        min-height: 10px;
+        min-width: 10px;
         border-radius: 50%;
       }
 
